Do not show tabs if there is only one login system

--- a/app/assets/stylesheets/combos/_ui-home-claim.scss
+++ b/app/assets/stylesheets/combos/_ui-home-claim.scss
@@ -34,3 +34,7 @@
   min-height: 150px;
   padding: $space-s $space-m $space-m;
 }
+
+.pitch-login-tab.round {
+  @include border-radius($border-radius-m);
+}
