--- a/app/views/import/permissions.html.haml
+++ b/app/views/import/permissions.html.haml
@@ -34,7 +34,7 @@
                 .ui-actions
                   = render :partial => "import/cancel"
                   %button.primary-button.large{type: :submit, disabled: true}
-                    = _("Save permissions and continue&hellip;")
+                    = _("Save permissions and continue...")
 
   .app-footer-push
 = render :partial => "application/footer", :locals => {:clipboard => false}
