Using name as pkey of meta_contexts
Fixing a query that used the removed meta_contexts.id

Refactored meta_context_id to meta_context_name

Railguard MetaContextName fixing

Railguard MetaContextName fixing

Railguard MetaContextName fixing

Railguard MetaContextName fixing

Railguard MetaContextName fixing

Railguard MetaContextName fixing

--- a/app/views/meta_contexts/_layout.html.haml
+++ b/app/views/meta_contexts/_layout.html.haml
@@ -1,4 +1,4 @@
-.app.view-meta-context{:"data-id" => @context.id}
+.app.view-meta-context{:"data-name" => @context.name}
 
   = render "application/header"
 
