--- a/app/views/application/_javascript.html.haml
+++ b/app/views/application/_javascript.html.haml
@@ -1,1 +1,2 @@
 = render :partial => "application/javascript/current_user" if current_user and not current_user.is_guest?
+= render "application/javascript/app_settings"
