--- a/app/views/media_resources/_media_resource.html.haml
+++ b/app/views/media_resources/_media_resource.html.haml
@@ -46,5 +46,5 @@
             %tr
               %td.ui-resource-meta-label Dummy Label
               %td.ui-resource-meta-content Dummy Content
-      .ui-resource-description{:"data-context" => "Institution"}
-      .ui-resource-extension{:"data-context" => "Nutzung"}
+      .ui-resource-description{:"data-context" => true}
+      .ui-resource-extension{:"data-context" => true}
