--- a/app/assets/javascripts/views/media_resources/meta_data_list_block.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/meta_data_list_block.tmpl.haml
@@ -1,18 +1,19 @@
-{{if App.MetaDatum.anyValue(meta_data)}}
-%table.borderless.block
-  %tbody
-    {{each(i,meta_datum) meta_data}}
-    {{if meta_datum.value}}
-    {{if meta_datum.name != "title"}}
-    %tr
-      %td.ui-resource-meta-label ${meta_datum.label}
-      %td.ui-resource-meta-content {{tmpl(meta_datum) App.renderPath("meta_data/meta_datum")}}
-    {{/if}}
-    {{/if}}
-    {{/each}}
-{{else}}
-%table.borderless.block
-  %tbody
-    %td.ui-resource-meta-label
-      %strong Es sind keine Metadaten zu dem Kontext "${$item.context}" bereit gestellt.
-{{/if}}
+%div{ :"data-context-name" =>  '${$item.context}'}
+  {{if App.MetaDatum.anyValue(meta_data)}}
+  %table.borderless.block
+    %tbody
+      {{each(i,meta_datum) meta_data}}
+      {{if meta_datum.value}}
+      {{if meta_datum.name != "title"}}
+      %tr
+        %td.ui-resource-meta-label ${meta_datum.label}
+        %td.ui-resource-meta-content {{tmpl(meta_datum) App.renderPath("meta_data/meta_datum")}}
+      {{/if}}
+      {{/if}}
+      {{/each}}
+  {{else}}
+  %table.borderless.block
+    %tbody
+      %td.ui-resource-meta-label
+        %strong Es sind keine Metadaten zu dem Kontext "${$item.context}" bereit gestellt.
+  {{/if}}
