Done translating JavaScript parts of the abstract.

--- a/app/assets/javascripts/views/abstracts/preview.tmpl.haml
+++ b/app/assets/javascripts/views/abstracts/preview.tmpl.haml
@@ -14,4 +14,4 @@
                       %img{:class => "ui-thumbnail-image", :src => "/media_resources/${id}/image"}
   {{/each}}
 .by-center
-  %span.title-xs-alt ${total} Inhalte
+  %span.title-xs-alt ${_jed("%d content elements", total)}
