Translated clipboard JS bits.

--- a/app/assets/javascripts/views/clipboard/media_resource.tmpl.haml
+++ b/app/assets/javascripts/views/clipboard/media_resource.tmpl.haml
@@ -12,5 +12,5 @@
                   {{else}}
                   %img{:class => "ui-thumbnail-image", :src => "/media_resources/${id}/image"}
                   {{/if}}
-  .ui-resource-clipboard-remove{:title => "Aus der Zwischenablage entfernen"}
+  .ui-resource-clipboard-remove{:title => "${_jed('Remove from clipboard')}"}
     .icon-remove.bright
