Translating JS for filter sets.

--- a/app/views/media_resources/list/_filterbar.html.haml
+++ b/app/views/media_resources/list/_filterbar.html.haml
@@ -7,9 +7,12 @@
       = _("Reset filters")
   .col2of6.by-center
     #ui-resources-type-filter.button-group
-      %a.button{:"data-type" => nil, :class => (params[:type].nil?) ? "active" : ""} Alle
-      %a.button{:"data-type" => "media_entries", :class => (params[:type] == "media_entries") ? "active" : ""} Medieneinträge
-      %a.button{:"data-type" => "media_sets", :class => (params[:type] == "media_sets") ? "active" : ""} Sets
+      %a.button{:"data-type" => nil, :class => (params[:type].nil?) ? "active" : ""} 
+        = _("All")
+      %a.button{:"data-type" => "media_entries", :class => (params[:type] == "media_entries") ? "active" : ""}
+        = _("Media entries")
+      %a.button{:"data-type" => "media_sets", :class => (params[:type] == "media_sets") ? "active" : ""}
+        = _("Sets")
   .col2of6.by-right
     %label#ui-clipboard-select-all.weak.disabled.ui-filterbar-select
       %span.active
