Removed method_missing in meta_context model
Fixing some cases for method missing in meta_contexts

wip try'n error fixing

wip ...

wip

wip (views)

wip

Commented out method missing in meta_context

--- a/app/views/admin/media_sets/_form.html.haml
+++ b/app/views/admin/media_sets/_form.html.haml
@@ -3,7 +3,7 @@
     = f.fields_for :meta_data, f.object.meta_data.get("title") do |ff|
       %tr
         %td= ff.object.meta_key.label
-        %td= field_tag(ff, MetaContext.media_set)
+        %td= field_tag(ff, MetaContext.find("media_set"))
 
     - if f.object.view
       %tr
