--- a/app/views/media_entries/show.html.haml
+++ b/app/views/media_entries/show.html.haml
@@ -3,7 +3,7 @@
 
     .ui-media-overview
       %dl.ui-media-overview-metadata.ui-metadata-box
-        = render :partial => "meta_data/meta_datum", :collection => @media_entry.meta_data.for_context(MetaContext.core), :locals => {:context => MetaContext.core}
+        = render :partial => "meta_data/meta_datum", :collection => @media_entry.meta_data.for_context(MetaContext.find("core")), :locals => {:context => MetaContext.find("core")}
       .ui-media-overview-preview
         = render :partial => "media_entries/preview"
 
