Removed method_missing from AppSettings
Simplified AppSettings
Refactored upload via dropbox feature tests

Squashed commit of the following:

commit 2ef232879675f09aef0f3773afe460058924be21
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Jun 24 11:12:00 2013 +0200

    Fix

commit 37aeb581145d7e991ddcd85604c7e50d22953a76
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Jun 24 11:01:50 2013 +0200

    Fix

commit 37250b6a8756145ac1e52a813837b85e2514c345
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Jun 24 09:52:33 2013 +0200

    Fix in drop_box controller, removed some dropbox complexity

commit d950acf48a1f70ce1acc644e4139cf602f956433
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Jun 24 08:53:31 2013 +0200

    Adjusted steps in import_via_dropbox

commit 3719e5b6f42547fdc16a3109a0ce576967df4c4f
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Jun 21 16:50:20 2013 +0200

    wip

commit 56d86272346e80516dc9610001c4248247385312
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Jun 21 16:44:43 2013 +0200

    Wip

commit bdcc1c5e6023f96f07ef87885db217118b337e2b
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Jun 21 16:31:00 2013 +0200

    Wip

commit b74ed411f5cb25fee4df63ee91613c1747ed3c3b
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Jun 21 16:21:05 2013 +0200

    wip

commit 05a8dd081a741a7afc1484816495bed78f298197
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Jun 21 15:31:41 2013 +0200

    Wip

commit 596597585c4aec484719b3425e1d09722d930ac7
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Jun 21 15:29:16 2013 +0200

    wip

commit 0da79bfc80b3fe75e5beb7248f2feec2f1b13c4b
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Jun 21 15:13:26 2013 +0200

    wip

commit 8f477f00241a99efe1dd98b032bd1932da7c4c41
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Jun 21 15:00:32 2013 +0200

    wip

commit 3cd79b92b443491936ed04c02e90eda082601022
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Jun 21 14:36:57 2013 +02

--- a/app/views/application/_footer.html.haml
+++ b/app/views/application/_footer.html.haml
@@ -4,7 +4,7 @@
 .app-footer
   %footer.ui-footer.ui-container.inverted
     %ul.ui-footer-menu
-      - AppSettings.footer_links.map{|k,v| {text: k, href: v}}.each do |footer_link|
+      - @app_settings.footer_links.map{|k,v| {text: k, href: v}}.each do |footer_link|
         = render 'footer_link', footer_link: footer_link
 
     %p.ui-footer-copy
