--- a/app/views/application/header/_brand.html.haml
+++ b/app/views/application/header/_brand.html.haml
@@ -1,5 +1,5 @@
 .ui-header-brand
   %a{:href => root_path}
-    = image_tag AppSettings.logo_url, :class => "ui-header-logo", style: "max-width: 100px;"
-    %h1.ui-header-brand-name= AppSettings.brand 
-    %h2.ui-header-instance-name= AppSettings.title
+    = image_tag @app_settings.logo_url, :class => "ui-header-logo", style: "max-width: 100px;"
+    %h1.ui-header-brand-name= @app_settings.brand 
+    %h2.ui-header-instance-name= @app_settings.title
