--- a/app/views/media_resources/index.html.haml
+++ b/app/views/media_resources/index.html.haml
@@ -7,7 +7,7 @@
       .ui-body-title
         .ui-body-title-label
           %h1.title-xl 
-            = AppSettings.title || "Medienarchiv"
+            = @app_settings.title || "Medienarchiv"
 
         .ui-body-title-actions
           - if current_user.is_guest?
