--- a/app/assets/javascripts/views/media_resource_arcs/organize/empty_results.tmpl.haml
+++ b/app/assets/javascripts/views/media_resource_arcs/organize/empty_results.tmpl.haml
@@ -1,1 +1,1 @@
-%h3.by-center.title-m Zu dieser Suche wurde kein Set gefunden
+%h3.by-center.title-m ${_jed('No set was found matching this search')}
