--- a/app/assets/javascripts/views/media_resource_arcs/organize/item.tmpl.haml
+++ b/app/assets/javascripts/views/media_resource_arcs/organize/item.tmpl.haml
@@ -3,12 +3,12 @@
 
     {{if is_incomplete_arc}}
     .tristate-checkbox-container.ui-set-list-input
-      %input{:id => "parent_resource_${id}", :type => "checkbox", :role => "tristate", :value => "mixed", :title => "Zu Set hinzufügen/entfernen"}
-      %span.tristate-checkbox-mixed-value{:title => "Ausgewählte Inhalte sind in diesem Set nur teilweise enthalten."}
+      %input{:id => "parent_resource_${id}", :type => "checkbox", :role => "tristate", :value => "mixed", :title => "${_jed('Add to/remove from set')}"}
+      %span.tristate-checkbox-mixed-value{:title => "${_jed('Selected content is only partially contained in this set.')}"}
     {{else $item.data.is_parent != undefined && is_parent == true}}
-    %input.ui-set-list-input{:id => "parent_resource_${id}", :type => "checkbox", :checked => :checked, :title => "Zu Set hinzufügen/entfernen"}
+    %input.ui-set-list-input{:id => "parent_resource_${id}", :type => "checkbox", :checked => :checked, :title => "${_jed('Add to/remove from set')}"}
     {{else}}
-    %input.ui-set-list-input{:id => "parent_resource_${id}", :type => "checkbox", :title => "Zu Set hinzufügen/entfernen"}
+    %input.ui-set-list-input{:id => "parent_resource_${id}", :type => "checkbox", :title => "${_jed('Add to/remove from set')}"}
     {{/if}}
 
     %span.title ${$item.data.getMetaDatumByMetaKeyName("title").formattedValue()}
