--- a/app/assets/javascripts/views/media_resource_arcs/organize/no_arcs_yet.tmpl.haml
+++ b/app/assets/javascripts/views/media_resource_arcs/organize/no_arcs_yet.tmpl.haml
@@ -1,1 +1,1 @@
-%h3.by-center.title-m Inhalte sind noch keinem Set zugewiesen.
+%h3.by-center.title-m ${_jed('Content is not yet assigned to any set')}
