--- a/app/views/application/_collage.html.haml
+++ b/app/views/application/_collage.html.haml
@@ -2,8 +2,8 @@
   - 2.times do |row|
     .ui-collage-row
       - 5.times do |col|
-        - i = (((row*5)+col)%@splashscreen_set.child_media_resources.size)
-        - mr = @splashscreen_set_included_resources[i]
+        - i = (((row*5)+col) % @splashscreen_set.included_resources_accessible_by_user(current_user).count )
+        - mr = @splashscreen_set.included_resources_accessible_by_user(current_user)[i]
         %a.ui-collage-item{:href => "/media_resources/#{mr.id}"}
           .ui-collage-item-wrapper
             .ui-collage-item-table
