--- a/app/assets/javascripts/views/media_resources/browse/entry.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/browse/entry.tmpl.haml
@@ -3,5 +3,5 @@
     %img{:src => "/media_resources/${id}/image?size=medium"}
   %ul.ui-featured-entry-actions
     %li.ui-featured-entry-action.col1of1
-      %a.block{:href => "/media_resources/${id}/browse", :title => "In diese Richtung weiterstöbern"}
+      %a.block{:href => "/media_resources/${id}/browse", :title => "${_jed('Continue browsing in this direction')}"}
         .ui-featured-action-browse
