--- a/app/assets/javascripts/views/media_resources/edit/collapsed_fields.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/edit/collapsed_fields.tmpl.haml
@@ -1,5 +1,5 @@
 %a.button.small.form-item-extension-toggle.mtm
   %i.icon-plus.dark
-  Weitere Angaben
+  ${_jed('Further details')}
 
 .ui-container.pam.ui-container.bordered.rounded.form-item-extension.hidden
