--- a/app/assets/javascripts/views/media_resources/filter/key.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/filter/key.tmpl.haml
@@ -7,7 +7,7 @@
     {{tmpl(terms) App.renderPath("media_resources/filter/term")}}
 
   {{if $item.parent.data.filter_type == 'meta_data'}}
-  %label.ui-any-value{:title => "Jegliche Werte"}
+  %label.ui-any-value{:title => "${_jed('Any values')}"}
     %input.any-value.hidden{:type => "checkbox"}
     %i.icon-checkbox
   {{/if}}
