--- a/app/assets/javascripts/views/media_resources/meta_data_list_block.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/meta_data_list_block.tmpl.haml
@@ -15,5 +15,5 @@
   %table.borderless.block
     %tbody
       %td.ui-resource-meta-label
-        %strong Es sind keine Metadaten zu dem Kontext "${$item.context}" bereit gestellt.
+        %strong ${_jed('No metadata available for the context "%s"', $item.context)}
   {{/if}}
