--- a/app/assets/javascripts/views/media_resources/delete_dialog.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/delete_dialog.tmpl.haml
@@ -1,14 +1,14 @@
 .modal.hide.fade.ui-modal.narrow{:role => "dialog", :tabindex => "-1"}
   %form
     .ui-modal-head
-      %a.ui-modal-close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button", :title => "Close", :class => "weak"}
-      %h3.title-l Inhalt löschen
+      %a.ui-modal-close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button", :title => "${_jed('Close')}", :class => "weak"}
+      %h3.title-l ${_jed('Delete item')}
     .ui-modal-body
       %p.pam.by-center
-        Sind Sie sicher, dass Sie den Inhalt
+        ${_jed('Are you sure you want to delete the following:')}
         %strong ${media_resource.title}
-        löschen möchten?
+        ?
     .ui-modal-footer
       .ui-actions
-        %a.link.weak{"aria-hidden" => "true", "data-dismiss" => "modal", :class => "weak link"} Abbrechen
-        %button.primary-button Löschen
+        %a.link.weak{"aria-hidden" => "true", "data-dismiss" => "modal", :class => "weak link"} ${_jed('Cancel')}
+        %button.primary-button ${_jed('Delete')}
