--- a/app/assets/javascripts/views/media_resources/dropdown.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/dropdown.tmpl.haml
@@ -1,34 +1,34 @@
 .ui-thumbnail-dropdown
   .dropdown.ui-dropdown
     %a.dropdown-toggle.button.block.ui-drop-toggle{"data-toggle" => "dropdown"} 
-      Aktionen
+      ${_jed('Actions')}
     %ul.dropdown-menu.ui-drop-menu{"aria-labelledby" => "dLabel", :role => "menu"}
       {{if is_editable}}
       %li.ui-drop-item
         %a{:href => "/media_resources/${id}/edit", :title => "Metadaten editieren"} 
           %i.icon-pen.mid
-          Metadaten editieren
+          ${_jed('Edit metadata')}
       {{/if}}
       %li.ui-drop-item
-        %a{:href => "/media_entries/${id}/browse", :title => "Nach vergleichbaren Medieneinträgen stöbern"}
+        %a{:href => "/media_entries/${id}/browse", :title => "${_jed('Browse for similar content')}"}
           %i.icon-eye.mid
-          Stöbern
+          ${_jed('Browse')}
       %li.ui-drop-item
-        %a{:title => "Zugriffsberechtigungen lesen/bearbeiten",
+        %a{:title => "${_jed('Read/edit permissions')}",
            :"data-open-permissions" => true,
            :"data-media-resource-id" => "${id}",
            :"data-manageable" => "${is_manageable}",
            :"data-title" => "${title}"}
           %i.icon-lock.mid
-          Zugriffsberechtigungen
+          ${_jed('Permissions')}
       %li.ui-drop-item
-        %a{:title => "Zu Set hinzufügen/entfernen",
+        %a{:title => "${_jed('Add to/remove from set')}",
            :"data-organize-arcs" => true}
           %i.icon-move.mid
-          Zu Set hinzufügen/entfernen
+          ${_jed('Add to/remove from set')}
       {{if is_deletable}}
       %li.ui-drop-item
-        %a{:"data-delete-action" => true, :title => "Unwiederbringlich entfernen"} 
+        %a{:"data-delete-action" => true, :title => "${_jed('Delete forever')}"} 
           %i.icon-trash.mid
-          Löschen
+          ${_jed('Delete')}
       {{/if}}
