--- a/app/assets/javascripts/views/media_resources/edit/fields/meta_datum_date.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/edit/fields/meta_datum_date.tmpl.haml
@@ -2,24 +2,24 @@
   .mrs
     %select.block
       %option{:"data-input" => ".input-free"}
-        Freie Eingabe
+        ${_jed('Free entry')}
       %option{:"data-input" => ".input-on"}
-        am
+        ${_jed('on')}
       %option{:"data-input" => ".input-from-to"}
-        von bis
+        ${_jed('from/to')}
 
 .form-date.input-free
   .col2of3
-    %input.block.value-target.input-free{:id => "resource[meta_data_attributes][${index}][value]", :type => "text", :name => "resource[meta_data_attributes][${index}][value]", :value => "${meta_datum.value}", :placeholder => "wird als Text gespeichert"}
+    %input.block.value-target.input-free{:id => "resource[meta_data_attributes][${index}][value]", :type => "text", :name => "resource[meta_data_attributes][${index}][value]", :value => "${meta_datum.value}", :placeholder => "${_jed('will be saved as text')}"}
 
 .form-date.input-from-to.hidden
   .col1of3
     .mrx
-      %input.block.ui-datepicker.input-from{:type => "text", :placeholder => "von"}
+      %input.block.ui-datepicker.input-from{:type => "text", :placeholder => "${_jed('from')}"}
   .col1of3
     .mlx
-      %input.block.ui-datepicker.input-to{:type => "text", :placeholder => "bis"}
+      %input.block.ui-datepicker.input-to{:type => "text", :placeholder => "$_jed('to')}"}
 
 .form-date.input-on.hidden
   .col2of3
-    %input.block.ui-datepicker.input-on{:type => "text", :placeholder => "am"}
+    %input.block.ui-datepicker.input-on{:type => "text", :placeholder => "$_jed('on')}"}
