--- a/app/assets/javascripts/views/media_resources/edit/fields/meta_datum_people.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/edit/fields/meta_datum_people.tmpl.haml
@@ -15,32 +15,32 @@
 
       %ul.ui-tabs
         %li.ui-tabs-item.active.mll.pls
-          %a{"data-toggle" => "tab", :href => "#person${index}"} Person
+          %a{"data-toggle" => "tab", :href => "#person${index}"} ${_jed('Person')}
         %li.ui-tabs-item
-          %a{"data-toggle" => "tab", :href => "#group${index}"} Gruppe
+          %a{"data-toggle" => "tab", :href => "#group${index}"} ${_jed('Group')}
       .tab-content.mbs
 
         .tab-pane.active.pam.ui-container.bordered.rounded-right.rounded-bottom{:id => "person${index}"}
           .ui-form-group.rowed.pbx.ptx
-            %label.form-label Nachname
+            %label.form-label ${_jed('Last name')}
             .form-item
               %input.block{:type => "text", :name => "last_name"}
           .ui-form-group.rowed.pbx.ptx
-            %label.form-label Vorname
+            %label.form-label ${_jed('First name')}
             .form-item
               %input.block{:type => "text", :name => "first_name"}
           .ui-form-group.rowed.pbx.ptx
-            %label.form-label Pseudonym
+            %label.form-label ${_jed('Pseudonym')}
             .form-item
               %input.block{:type => "text", :name => "pseudonym"}
           .ui-form-group.rowed.ptm.limited-width-s
-            %button.add-person.button.block Person einfügen
+            %button.add-person.button.block ${_jed('Add person')}
 
         .tab-pane.pam.ui-container.bordered.rounded-right.rounded-bottom{:id => "group${index}"}
           .ui-form-group.rowed.pbx.ptx
-            %label.form-label Name
+            %label.form-label ${_jed('Name')}
             .form-item
               %input.block{:type => "hidden", :name => "is_group", :value => 1}
               %input.block{:type => "text", :name => "first_name"}
           .ui-form-group.rowed.ptm.limited-width-s
-            %button.add-group.button.block Gruppe einfügen
+            %button.add-group.button.block ${_jed('Add group')}
