--- a/app/assets/javascripts/views/media_resources/filter/term.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/filter/term.tmpl.haml
@@ -3,6 +3,6 @@
     {{if value.length}}
     ${value}
     {{else}}
-    = "unbekannt"
+    = "${_jed('unknown')}"
     {{/if}}
     %span.ui-lvl3-item-count.resources_count ${(count>9999) ? ">9999" : count} 
