--- a/app/assets/javascripts/views/media_resources/media_resource.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/media_resource.tmpl.haml
@@ -2,9 +2,9 @@
   .ui-resource-head
     %ul.ui-resource-actions
       %li.ui-resource-action
-        %a.ui-thumbnail-action-checkbox{:"data-clipboard-toggle" => true, :title => "Zur Zwischenablage hinzufügen/entfernen"}
+        %a.ui-thumbnail-action-checkbox{:"data-clipboard-toggle" => true, :title => "${_jed('Add to/remove from clipboard')}"}
       %li.ui-resource-action
-        %a.ui-thumbnail-action-favorite{:"data-favor-toggle" => true, :title => "Zu Favoriten hinzufügen/entfernen"} Favorite
+        %a.ui-thumbnail-action-favorite{:"data-favor-toggle" => true, :title => "${_jed('Add to/remove from favorites')}"} Favorite
     %h3.ui-resource-title
       ${title}
   .ui-resource-body
