--- a/app/assets/javascripts/views/media_resources/page.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/page.tmpl.haml
@@ -1,9 +1,9 @@
 %li{:class => "ui-resources-page{{if not_loaded}} not-loaded{{/if}}", :"data-page" => "${page}"}
   %span.ui-resources-page-counter 
     %span#resources_counter ${total} 
-    Inhalte, Seite  
+    ${_jed('items')}, ${_jed('page')}  
     %span#pages_counter ${page}
-    von 
+    ${_jed('of')} 
     %span#total_pages_counter ${total_pages}
 
   %ul.ui-resources-page-items
