--- a/app/views/application/root.html.haml
+++ b/app/views/application/root.html.haml
@@ -11,22 +11,17 @@
       = render "application/navigation"
 
       - if @catalog_set and not @catalog_set_categories.empty?
-        = render :partial => "media_resources/wrapper", 
-                 :locals => {:id => 'catalog',
-                             :media_resources => @catalog_set_categories, 
-                             :catalog_set => @catalog_set,
-                             :title => @catalog_set.title, 
-                             :link => explore_catalog_path,
-                             :as => :category}
+        = render "media_resources/wrapper", :id => 'catalog',
+          :media_resources => @catalog_set_categories, :catalog_set => @catalog_set,
+          :title => @catalog_set.title, :link => explore_catalog_path, :as => :category
 
         %hr.separator
       
       - if @featured_set and not @featured_set_children.empty?
-        = render :partial => "media_resources/wrapper", 
-          :locals => {:id => 'featured-set', 
-                      :media_resources => @featured_set_children, 
-                      :title => @featured_set.title,
-                      :link => explore_featured_set_path}
+        = render  "media_resources/wrapper", :id => 'featured-set', 
+            :media_resources => @featured_set_children, 
+            :title => @featured_set.title, :link => explore_featured_set_path
+
         %hr.separator
 
       - unless @latest_media_entries.empty?
