--- a/app/assets/javascripts/views/permissions/index.tmpl.haml
+++ b/app/assets/javascripts/views/permissions/index.tmpl.haml
@@ -9,18 +9,18 @@
         %thead
           %tr
             %td.ui-rights-user-title
-            %td.ui-rights-owner-title Verantwortliche Person
-            %td.ui-rights-role-title  Berechtigung
-            %td.ui-rights-check-title Betrachten
-            %td.ui-rights-check-title Download Original
-            %td.ui-rights-check-title Editieren
-            %td.ui-rights-check-title Berechtigung verwalten
+            %td.ui-rights-owner-title ${_jed('Responsible person')}
+            %td.ui-rights-role-title  ${_jed('Permission')}
+            %td.ui-rights-check-title ${_jed('View')}
+            %td.ui-rights-check-title ${_jed('Download original')}
+            %td.ui-rights-check-title ${_jed('Edit')}
+            %td.ui-rights-check-title ${_jed('Edit permissions')}
 
   .ui-modal-body
     .ui-rights-management-current-user
 
       %h3.title-l.separated.mbx
-        Ich
+        ${_jed('Me')}
         .icon-privacy-private.mtx
 
       .ui-rights-body
@@ -32,7 +32,7 @@
     %div{:class => "ui-rights-management-current-user-groups{{if currentUserGroups}}{{else}} hidden{{/if}}"}
 
       %h4.title-s.mts.separated.mbx
-        Gruppen mit mir
+        ${_jed('Groups that include me')}
         %i.icon-privacy-group
 
       .ui-rights-body
@@ -44,13 +44,13 @@
 
     .ui-rights-management-others
 
-      %h3.title-l.mts.mbx Andere
+      %h3.title-l.mts.mbx ${_jed('Others')}
 
       {{if $item.manageable == true || otherUsers.length > 0}}
       .ui-rights-management-other-users
 
         %h4.title-s.mts.separated.mbx
-          Personen
+          ${_jed('People')}
           %i.icon-privacy-private-alt
 
         .ui-rights-body
@@ -63,7 +63,7 @@
           {{if $item.manageable}}
           #addUser.ui-add-subject.ptx.row
             .col2of3
-              %input.small.block{name: 'user', type: 'text', placeholder:  "Name der Person"}
+              %input.small.block{name: 'user', type: 'text', placeholder:  "${_jed('Name of the person')}"}
           {{/if}}
       {{/if}}
 
@@ -72,7 +72,7 @@
       .ui-rights-management-other-groups
 
         %h4.title-s.mts.separated.mbx
-          Gruppen
+          ${_jed('Groups')}
           %i.icon-privacy-group-alt
 
         .ui-rights-body
@@ -85,7 +85,7 @@
           {{if $item.manageable}}
           #addGroup.ui-add-subject.ptx.row
             .col2of3
-              %input.small.block{type: :text, placeholder: "Name der Gruppe", name: 'group'}
+              %input.small.block{type: :text, placeholder: "${_jed('Name of the group')}", name: 'group'}
           {{/if}}
       {{/if}}
 
