Fixing syntax error in search results that caused 500 on search.

--- a/app/views/search/term.html.haml
+++ b/app/views/search/term.html.haml
@@ -47,7 +47,7 @@
 
           = render :partial => "media_resources/list/toolbar", 
                    :locals => {:title => _("Search result"),
-                               :subtitle => _("%d content elements", @result_count_for_term)}
+                               :subtitle => _("%d content elements" % @result_count_for_term)}
 
           = render :partial => "media_resources/list/filterbar"
 
