--- a/app/views/search/search.html.haml
+++ b/app/views/search/search.html.haml
@@ -22,11 +22,12 @@
     .app-body-ui-container
       .bordered.ui-container.midtone.rounded.table
         .ui-search-form
-          %form{:action => search_path, :method => :post}
-            = token_tag nil
-            .ui-search.large.mbm
-              %input.block.ui-search-input{:type => "text", :name => "search", :autofocus => :autofocus, :placeholder => placeholder_text}
-              = submit_tag "Suchen", class: "button primary-button ui-search-button"
+
+          =form_tag search_path, method: 'POST' do
+            .ui-search.large.mts
+              =text_field_tag :search, nil, type: 'text', autofocus: true, placeholder: placeholder_text, class: "block ui-search-input"
+              =button_tag type: 'submit', class: "primary-button ui-search-button" do
+                =_("Search")
 
   .app-footer-push
 = render :partial => "application/footer"
